ingress-chess.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-chess
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
      - "pmqxyz.hopto.org"
    secretName: my-tls-secret
  rules:
  - host: "pmqxyz.hopto.org"
    http:
      paths:
      - path: /chess/
        pathType: Prefix
        backend:
          service:
            name: chess-game-service
            port:
              number: 8099
