ingress-sudoku.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sudoku
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    traefik.ingress.kubernetes.io/router.middlewares: default-strip-sudoku-prefix@kubernetescrd
    traefik.ingress.kubernetes.io/router.priority: "100"
spec:
  tls:
  - hosts:
      - "pmqxyz.hopto.org"
    secretName: my-tls-secret
  rules:
  - host: "pmqxyz.hopto.org"
    http:
      paths:
      - path: /sudoku/
        pathType: Prefix
        backend:
          service:
            name: sudoku-app
            port:
              number: 9097
