ingress-sumplete.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-sumplete
  namespace: default
  annotations:
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
    # Itt nincs stripPrefix middleware, mert a backend várja a /sumplete prefixet.
spec:
  tls:
  - hosts:
      - "pmqxyz.hopto.org"
    secretName: my-tls-secret
  rules:
  - host: "pmqxyz.hopto.org"
    http:
      paths:
      - path: /sumplete/
        pathType: Prefix
        backend:
          service:
            name: sum-local-service
            port:
              number: 8080
