my-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  namespace: default
  annotations:
    nginx.ingress.kubernetes.io/ssl-redirect: "true"
    cert-manager.io/cluster-issuer: "letsencrypt-prod"
spec:
  tls:
  - hosts:
    - "pmqxyz.hopto.org"
    secretName: my-tls-secret  # A cert-manager fogja kezelni ezt a titkot
  rules:
  - host: "pmqxyz.hopto.org"
    http:
      paths:
      - path: /tic-tac-toe
        pathType: Prefix
        backend:
          service:
            name: ultimate-tic-tac-toe-service
            port:
              number: 8080
      - path: /sumplete
        pathType: Prefix
        backend:
          service:
            name: sumplete-service
            port:
              number: 8090
      - path: /chess
        pathType: Prefix
        backend:
          service:
            name: chess-service
            port:
              number: 8099
      - path: /
        pathType: Prefix
        backend:
          service:
            name: landing-page-service
            port:
              number: 80
